debezium/dbz#1567 Refactor Schema generator
Signed-off-by: Fiore Mario Vitale <mvitale@redhat.com>